fix vertical spacing problem in docker section cleanup

--- a/cv/static/cv/css/default.css
+++ b/cv/static/cv/css/default.css
@@ -642,6 +642,9 @@ input[type="checkbox"] { display: inline; }
 .no-padding{
     padding: 0;
 }
+.no-margin{
+    margin: 0;
+}
 
 /* removed gutters */
 .row.collapsed > .column,
